# CUDA_Matx_Mul

./: 2d_DomainDecomposition.cu  3D_Solver_v1_0.cu  F2D_Final_MultiThreaded_V10.0.cu  F2D_Final_MultiThreaded_V11.0.cu  F2D_Final_SingleThreaded_V11.0.cu  Final_MultiThreaded_NVVP_compatible.cu  OpenMP_CUDA.cu  README.md  RoadMap.txt  cudaSeperateStreamForHalos.cu  f2d_Single_Thread_Final_MoreGeneric.cu  f2d_V1_0.cu  f2d_V2_0.cu  f2d_V2_5.cu  f2d_V3_0.cu  f2d_V3_5.cu  f2d_V4_0.cu  f2d_V4_5.cu  f2d_V5_0.cu  f2d_V5_5.cu  f2d_V6_0.cu  f2d_V6_0_MultithreadedHost_OpenMP.cu  f2d_V6_0_Single_Stream_MultithreadedHost_OpenMP.cu  f2d_V6_5_MultiStream_MultithreadedHost_OpenMP.cu  f2d_V7_5_Final_SingleThread_MultiStream_UsingEvents_paired_Send_Recieve.cu  f2d_V8_0_Final_SingleThread_MultiStream_UsingEvents_Individual_Send.cu  f2d_V8_5_Final_MultiThread_MultiStream_UsingEvents_Individual_Send.cu  mat_mul_test_kernal.cu  multGPUv2.cu  multiGPUConfig.xml  multiGPU_f2d.cu  multiThreaded_F2D_Final.cu  multi_GPU_kernl.cu  singleThreaded_F2D_Final.cu  workingCopy_multigpuf2d.cu
Matrix_mult/: JacobiItr.cu  Matrix_mult.sln
SimpleJacobiMultiGPU_2D_sm21/: testMultiGPU_Jacobi.cu  testMultiGPU_Jacobi2D_Decom.cu  testMultiGPU_Jacobi2D_SingleThread_Decom.cu
SimpleJacobiMultiGPU_3D_sm_30/: CMakeLists.txt  testMultiGPU_Jacobi3D.cu  testMultiGPU_Jacobi3D.cu_MultiThreaded  testMultiGPU_Jacobi3D.cu_MultiThreaded_Topology_Optimized  testMultiGPU_Jacobi3D.cu_original  testMultiGPU_Jacobi3D.cu_singleThreaded  testMultiGPU_Jacobi3D.cuh
Test_CUDA_Project/: Test_CUDA_Project.VC.VC.opendb  Test_CUDA_Project.sln
(+15 files in other folders)
